# BitHive

./: .eslintrc.json  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: release.yml
.husky/: pre-commit
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AddMinerForm.tsx  Header.tsx  HiveDashboard.tsx  MinerStatus.tsx  MinerTable.tsx  Providers.tsx  Settings.tsx
src/context/: FetchContext.tsx
src/hooks/: useHiveData.tsx
src/lib/: api.ts  asicDefaults.ts
src/pages/: _app.tsx  index.tsx
src/utils/: helpers.ts
